...
        android:layout_marginTop="317dp"
        android:backgroundTint="#4CAF50"
        android:text="Recognise Text"
        android:textSize="20dp" />

    <Button
        android:id="@+id/calendarBtn"
        android:layout_width="162dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/greeting"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="29dp"
        android:layout_marginTop="431dp"
        android:backgroundTint="#4CAF50"
        android:text="Create reminder"
        android:textSize="20dp" />

    <Button
        android:id="@+id/healthBtn"
        android:layout_width="169dp"
        android:layout_height="88dp"
        android:layout_below="@+id/greeting"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerVertical="true"
        android:layout_marginStart="212dp"
        android:layout_marginTop="318dp"
        android:backgroundTint="#4CAF50"
        android:text="Save diagnosis"
        android:textSize="20dp" />

    <!--The alarm maker and the email and message creator links are added to the home page for easier navigation and accessibility-->
    <Button
        android:id="@+id/contactBtn"
        android:layout_width="162dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/greeting"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="217dp"
        android:layout_marginTop="429dp"
        android:backgroundTint="#4CAF50"
        android:text="Add a contact"
        android:textSize="20dp" />

    <Button
        android:id="@+id/profileBtn"
        android:layout_width="162dp"
        android:layout_height="wrap_content"
...
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_timer_foreground"
        android:layout_below="@+id/profileBtn"
        android:layout_marginLeft="250dp"
        android:id="@+id/notificationBtn"
        />
</RelativeLayout>
