...
                android:textAlignment="center"
                android:padding="5dp"
                android:layout_marginTop="10dp"
                />

            <EditText
                android:id="@+id/userName"
                android:layout_width="296dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:ems="10"
                android:hint="Enter name"
                android:inputType="text"
                android:textSize="20sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/titleDesc" />

            <EditText
                android:id="@+id/userAge"
                android:layout_width="298dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:ems="10"
                android:hint="Enter age"
                android:inputType="number"
                android:textSize="20sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/userName" />

            <EditText
                android:id="@+id/userGender"
                android:layout_width="299dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:ems="10"
                android:hint="Enter gender (if applicable)"
                android:inputType="text"
...
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/userAge" />


            <EditText
                android:id="@+id/userEmail"
                android:layout_width="301dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:ems="10"
                android:hint="Enter email"
                android:inputType="textEmailAddress"
                android:textSize="20sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/userGender" />

            <EditText
                android:id="@+id/userPassword"
                android:layout_width="301dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:ems="10"
                android:hint="Enter password"
                android:inputType="textPassword"
                android:textSize="20sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/userEmail" />

            <Button
                android:id="@+id/regBtn"
                android:layout_width="310dp"
                android:layout_height="71dp"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="24dp"
                android:backgroundTint="#8BC34A"
                android:text="Sign up account"
                android:textSize="20dp"
                android:textStyle="bold"
                app:cornerRadius = "20dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/userPassword" />
...
