...
        android:layout_height="wrap_content"
        android:text="Choose \ntime"
        android:layout_marginTop="280dp"
        android:layout_gravity="center_horizontal"
        android:textColor="@color/black"
        android:textAlignment="center"
        android:id="@+id/selectTime"
        android:textSize="40dp"
        />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/setTime"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:padding="9dp"
            android:text="Set Alarm"
            app:cornerRadius="20dp"
            android:textSize="20dp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="250dp"/>

        <Button
...
